--- a/Final Project - Blog.ipynb
+++ b/Final Project - Blog.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:21961298173ae3c4e696d0dec4b35a5fe567f7720006708a4dd9612772480251"
+  "signature": "sha256:d8341f0aed0a3c9b192525440467e43ba674a72390c06ac7425b43ed0238609a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -103,7 +103,7 @@
       "\n",
       "This service has been continouslly crawled for the last 6 months by which we have created a historical dump of traffic related data, with 5 minutes resampling interval, for all 447 sensors. The availability of large amount of data makes this problem highly suitable for several machine learning methods.\n",
       "\n",
-      "<img src=\"figures/counters.png\">\n",
+      "<img src=\"./figures/counters.png\">\n",
       "\n",
       "\n",
       "\n"
