Added traffic parameter figure.

--- a/Final Project - Blog.ipynb
+++ b/Final Project - Blog.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2e999d71ae00ca34de71717405ee8e2936ed6440591b09353692044fad5e29d8"
+  "signature": "sha256:025ab11bea61e350ea2cab3613a4a3d80d4e71fbc3f0f7d3c72d54ab8d297f51"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -242,6 +242,17 @@
       }
      ],
      "prompt_number": 70
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font color='red'>TODO: </font> Description: This graph contains data visualisation from all data fields...\n",
+      "\n",
+      "<font color='red'>QUESTION: </font> How to do captiones to figures and references from text?\n",
+      "\n",
+      "<img src=\"files/Figures/traffic_params.png\" width=\"80%\" height=\"80%\"/>"
+     ]
     },
     {
      "cell_type": "heading",
@@ -966,6 +977,13 @@
      "metadata": {},
      "source": [
       "<font color='red'>TODO: </font> add one week speed and flow graph. I will do this after I finish lesson 4."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font color='red'>TODO: </font> add some histograms. One before cleaning, where data is at 0. Another after cleaning. What is close to zero, are actually congestions."
      ]
     },
     {
