--- a/Work In Progress.ipynb
+++ b/Work In Progress.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eba9d293ae02ece15c291414478e178e31b782d2b7c867fb3f070e54132c1442"
+  "signature": "sha256:606fff4467f07eeaae9b50493f4287f71bee0570d76ca21fd09ba8d127a0cf14"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -274,22 +274,29 @@
       "import statsmodels # Is this used??\n",
       "\n",
       "def predictions(dataframe):\n",
-      "    dataframe = dataframe.head(15000)\n",
-      "    dummy_units = pd.get_dummies(dataframe['UNIT'], prefix='unit')\n",
-      "    features = dataframe[['rain', 'precipi', 'Hour', 'meantempi']].join(dummy_units)\n",
-      "    values = dataframe[['ENTRIESn_hourly']]\n",
-      "    m = len(values)\n",
+      "    features = dataframe[[\"Flow\",\"Gap\",\"Occupancy\",\"Speed\",\"TrafficStatus\"]]\n",
+      "    values = dataframe[[\"Target\"]]\n",
       "\n",
-      "    features['ones'] = np.ones(m)\n",
+      "    features[\"ones\"] = np.ones(len(values))\n",
       "    features_array = np.array(features)\n",
       "    values_array = np.array(values).flatten()\n",
-      "    \n",
+      "        \n",
       "    theta_ols = linalg.lstsq(features_array, values_array)[0] \n",
       "    predictions = np.dot(features_array, theta_ols)\n",
       "  \n",
       "    return predictions\n",
       "\n",
-      "traffic_data\n"
+      "def compute_r_squared(data, predictions):\n",
+      "    SST = ((data-np.mean(data))**2).sum()\n",
+      "    SSReg = ((predictions-np.mean(data))**2).sum()\n",
+      "    r_squared = SSReg / SST\n",
+      "\n",
+      "    return r_squared\n",
+      "\n",
+      "\n",
+      "traffic_data[\"Predictions\"] = predictions(traffic_data)\n",
+      "print compute_r_squared(traffic_data[\"Target\"], traffic_data[\"Predictions\"])\n",
+      "#traffic_data\n"
      ],
      "language": "python",
      "metadata": {},
