--- a/Final Project - Blog.ipynb
+++ b/Final Project - Blog.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0d0c15dcd69a2c1f0f72ee9369c5f5714833b305c18230576216a267603fecf7"
+  "signature": "sha256:148cf46acb60d58b29a5b3df7960f7a6d502813d8b7c54a668f3a7e51747f2f6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1839,7 +1839,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this research, we have shown the whole proces of developing prediction model for one particular sensor, that is able to predict traffic flow 5 hours into the future. First, data were described in detail. Dataset was then cleaned and reduced. Statistical tests were then performed to get a better understanding of data. Additional features were extracted from timestamp of each record. Linear regression model (OCL) was then described, and 4 different models were developed. Each containning different features set. This models were then tested and evaluated on testing set. The result can be seen on bellow figure, where we can see that our Model4 gave the best results. From this we can conclude, that additional datetime features has a signifficant impact on prediction accuracy. If this features are also parsed into binary features, this results to even better accuracy."
+      "In this research, we have shown the whole process of developing prediction model for one particular sensor, that is able to predict traffic flow 5 hours into the future. First, data were described in detail. Dataset was then cleaned and reduced. Statistical tests were then performed to get a better understanding of data. Additional features were extracted from timestamp of each record. Linear regression model (OCL) was then described, and 4 different models were developed. Each containing different features set. This models were then tested and evaluated on testing set. The result can be seen on bellow figure, where we can see that our Model4 gave the best results. From this we can conclude, that additional datetime features has a significant impact on prediction accuracy. If this features are also parsed into binary features, this results to even better accuracy."
      ]
     },
     {
@@ -1870,12 +1870,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As we have allready mentioned, this research has shown modelling of traffic only for one specific sensor. Even if the method is relativelly simple, and computionally non demanding, we can expect some problems if we would have to model thousnds of different sensros. Not to even mention, that we would need also different models for different predictions horizons, or different paramters (speed, occupancy, ...). This is the case where MapReduce could signifficantlly improve this process.\n",
+      "As we have already mentioned, this research has shown modelling of traffic only for one specific sensor. Even if the method is relatively simple, and computationally non demanding, we can expect some problems if we would have to model thousands of different sensors. Not to even mention, that we would need also different models for different predictions horizons, or different parameters (speed, occupancy, ...). This is the case where MapReduce could significantly improve this process.\n",
       "\n",
-      "Finally, we can conclude that we have shown good prediction results, and that linear regression with additional datetime features can be used for predictiong traffic flow. Work such as this one, can lead to development of advanced applications that aims to \n",
+      "Finally, we can conclude that we have shown good prediction results, and that linear regression with additional datetime features can be used for predicting traffic flow. Work such as this one, can lead to development of advanced applications that aims to \n",
       "provide innovative services related to traffic management and transportation, that result to \n",
       "reducing  traffic  congestions,  emissions,  energy  consumptions,  delays  and  improved \n",
-      "safety."
+      "safety.\n"
      ]
     }
    ],
